hphp/test/zend/bad/tests/basic/026.php
<?php
var_dump($_POST, $HTTP_RAW_POST_DATA);
?>